--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<title>@diamarda</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+<body>
+	<section class="hero is-primary is-medium">
+		<div class="hero-head">
+			<header class="nav">
+				<div class="container">
+					<div class="nav-left">
+						<a href="#" class="nav-ite">
+							<img src=""assets/img/logo.png" class="logo">
+						</a>
+					</div>
+					<div class="nav-right nav-menu">
+						<a href="http://github.com/diamardan" target="_blank" class="nav-item"></a>
+					</div>
+				</div>
+			</header>
+		</div>
+	</section>
+</body>
+</html>
